--- a/config/config-api/build.gradle
+++ b/config/config-api/build.gradle
@@ -28,11 +28,12 @@ dependencies {
   implementation project.deps.commonsCodec
   implementation project.deps.commonsCollections4
   implementation project.deps.commonsText
-  api(project.deps.quartz) {
+  implementation(project.deps.quartz) {
     transitive = false
   }
   api project.deps.cloning
   api project.deps.jdom
+  api project.deps.springWeb
   implementation project.deps.slf4jApi
   implementation project.deps.felix
   implementation project.deps.guava
