--- a/plugin-infra/go-plugin-access/build.gradle
+++ b/plugin-infra/go-plugin-access/build.gradle
@@ -14,10 +14,6 @@
  * limitations under the License.
  */
 
-plugins {
-  id 'groovy'
-}
-
 description = 'APIs to allow GoCD to communicate with GoCD Plugins'
 
 dependencies {
@@ -38,11 +34,12 @@ dependencies {
   implementation project.deps.springContext
   compileOnly project.deps.jetBrainsAnnotations
 
-  testImplementation localGroovy()
   testImplementation project.deps.jsonUnit
   testImplementation project(path: ':test:test-utils', configuration: 'runtimeElements')
   testImplementation project(path: ':domain', configuration: 'testOutput')
   testImplementation project.deps.junit5Api
+  testImplementation project.deps.mockitoCore
+  testImplementation project.deps.mockitoJunit5
   testRuntimeOnly project.deps.junit5Engine
   testImplementation project.deps.assertJ
 }
