Add back groovy testing for plugin-infra-access
There is still one Groovy test here unfortunately.

--- a/plugin-infra/go-plugin-access/build.gradle
+++ b/plugin-infra/go-plugin-access/build.gradle
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+plugins {
+  id 'groovy'
+}
+
 description = 'APIs to allow GoCD to communicate with GoCD Plugins'
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
   implementation project.deps.springContext
   compileOnly project.deps.jetBrainsAnnotations
 
+  testImplementation localGroovy()
   testImplementation project.deps.jsonUnit
   testImplementation project(path: ':test:test-utils', configuration: 'runtimeElements')
   testImplementation project(path: ':domain', configuration: 'testOutput')
