Remove unnecessary transitive dependencies from Jetty
Jetty 10.0.18 accidentally added dependencies on `awaitility` and `hamcrest` in `jetty-deploy` via https://github.com/jetty/jetty.project/pull/10667

This workaround can be removed once https://github.com/jetty/jetty.project/issues/10812 is addressed.

--- a/development-utility/development-server/build.gradle
+++ b/development-utility/development-server/build.gradle
@@ -30,7 +30,9 @@ dependencies {
   implementation project.deps.jettyJmx
   implementation project.deps.jettyServlets
   implementation project.deps.jettyUtil
-  implementation project.deps.jettyDeploy
+  implementation(project.deps.jettyDeploy) {
+    exclude(module: 'awaitility') // See https://github.com/jetty/jetty.project/issues/10812
+  }
   implementation(project.deps.jettyWebsocket) {
     exclude(module: 'jetty-annotations')
   }
