Make prepare leaner by not include test code
When doing a prepare for local dev, there's no need to compile all the test code - and this takes ages. Probably
not necessary to compile all production code either, but let's leave that there.

Also clean up dependencies on rails tasks so they are bit easier to grok.

--- a/build.gradle
+++ b/build.gradle
@@ -632,15 +632,25 @@ task allDependencies {
   description = "Print dependency tree of all projects"
 }
 
-task compileAll { compileAllTask ->
-  group LifecycleBasePlugin.BUILD_GROUP
+private allCompileTasks(Closure<Boolean> include = { t -> true }) {
   allprojects.collect { Project prj ->
-    compileAll.dependsOn(prj.getTasks().withType(JavaCompile))
-    compileAll.dependsOn(prj.getTasks().withType(GroovyCompile))
+    prj.afterEvaluate {
+      compileAll.dependsOn(prj.getTasks().withType(JavaCompile).findAll(include))
+      compileAll.dependsOn(prj.getTasks().withType(GroovyCompile).findAll(include))
+    }
   }
 }
 
-task prepare(dependsOn: compileAll)
+
+task compileAll { compileAllTask ->
+  group LifecycleBasePlugin.BUILD_GROUP
+  allCompileTasks()
+}
+
+task prepare {
+  group LifecycleBasePlugin.BUILD_GROUP
+  allCompileTasks { Task task -> !task.name.toLowerCase().contains('test') && !task.project.path.toLowerCase().contains('test') }
+}
 
 task sparkTest { thisTask ->
   group LifecycleBasePlugin.VERIFICATION_GROUP
